new route hola prooof

--- a/vercel.json
+++ b/vercel.json
@@ -1,14 +1,14 @@
 {
   "builds": [
     {
-      "src": "./index.js",
+      "src": "*.js",
       "use": "@vercel/node"
     }
   ],
   "routes": [
     {
-      "src": "src/(.*)",
-      "dest": "src/"
+      "src": "/hola",
+      "dest": "/index.js"
     }
   ]
 }
